--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,5 +3,31 @@
   height: 480px;
   border: 3px solid black;
 }
+header {
+  background: url(/images/banner.png) repeat-x;
+  color: #DEF;
+  height: 100px;
+  margin: 0 auto;
+  padding: 10px 0;
+}
 
+body {
+    background: #1b1c1e url(/images/body_bg.png) 50% 0 repeat-y;
+    text-align: left;
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1em;
+    color: #AAA;
+    margin: 0;
+    text-shadow: #000 1px 1px 1px;
+  }
+
+#cr-stage {
+    margin: 0 auto;
+}
+
+audio {
+display:block;
+margin: 15px auto;
+}
 #soundmanager-debug{margin-top:100px;} 
