--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,10 +20,18 @@ body {
   margin: 0 auto;
   border:2px solid #333;
 }
+.strobe {
+  border: 2px solid gray;
+  width: 64px;
+  height: 64px;
+  background-color: black;
+}
 
 audio {
-  display:block;
+  display: block;
   margin: 15px auto;
 }
 
-#soundmanager-debug{margin-top:100px;} 
+#soundmanager-debug{
+  margin-top:100px;
+}
