--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,12 @@ body {
   margin: 0 auto;
   border:2px solid #333;
 }
+#dude-canvas {
+  position: absolute;
+  z-index: 10;
+  background-color: white;
+  opacity: 0;
+}
 .strobe {
   border: 2px solid gray;
   width: 64px;
