--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,11 @@ body {
   margin: 0 auto;
   border:2px solid #333;
 }
+
+#instructions {
+  margin: 10px 0px;
+}
+
 #dude-canvas {
   position: absolute;
   z-index: 10;
