--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,18 +26,24 @@ header {
 #intro-page {
   font-size: 12pt;
   width: 800px;
-  text-align: center;
   display: none;
   position: absolute;
   z-index: 50;
+  text-align: center;
 }
 #intro-page h3 {
   color: white;
   font-size: 2em;
 }
-#intro-page h4 {
-  font-size: 1.6em;
-  z-index: 30;
+#intro-instructions {
+  width: 600px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 150px;
+  text-align: left;
+  color: #e7e7e7;
+}
+#intro-page ul {
 }
 button#play-button {
   color: white;
