--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,7 +134,16 @@ button#play-button:active {
   float: left;
   display: none;
 }
-
+#song-info {
+  color: white;
+  width: 50px;
+  font-weight: bold;
+  background-color: black;
+  text-align: center;
+  border: 2px solid #272727;
+  padding: 5px;
+  margin: 15px auto;
+}
 audio {
   display: block;
   margin: 15px auto;
